# Utopia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  commit_msg.txt  main_simulation.py  pyproject.toml
examples/: agent_persona_demo.py  financial_market_simulation.py  simple_simulation.py
tests/: __init__.py  test_agent_persona.py  test_batch_embedding.py  test_beliefs_v2.py  test_core.py  test_cqrs_event_sourcing.py  test_engine.py  test_homophily.py  test_knowledge_graph.py  test_llm_router.py  test_memory.py  test_memory_3tier.py  test_memory_consolidation.py  test_metrics_collector.py  test_neo4j_batch_mutator.py  test_relationships.py  test_social_tensor_performance.py  test_wake_sleep.py  test_world_state_buffer.py
utopia/: __init__.py
utopia/core/: __init__.py  config.py  models.py  pydantic_models.py  utils.py
utopia/layer1_seed/: __init__.py  extractor.py  merger.py  parser.py
utopia/layer2_world/: __init__.py  knowledge_graph.py  neo4j_graph_mutator.py  query_service.py  rule_engine.py  world_event_buffer.py  world_events.py
utopia/layer3_cognition/: __init__.py  agent.py  agent_factory.py  agent_persona_models.py  beliefs.py  beliefs_v2.py  decision_engine.py  memory.py  memory_3tier.py  memory_consolidation.py  persona_anchor.py  warm_memory_models.py
utopia/layer4_social/: __init__.py  dynamics.py  homophily.py  propagator.py  propagator_vectorized.py  relationships.py  social_network_tensor.py
utopia/layer5_engine/: __init__.py  action_buffer.py  async_llm_scheduler.py  batch_embedding_processor.py  convergence.py  engine.py  engine_cqrs.py  event_injector.py  llm_router.py  mailbox.py  world_state_buffer.py
utopia/layer6_analysis/: __init__.py  (+3 more)
